--- a/client/public/index.html
+++ b/client/public/index.html
@@ -30,6 +30,11 @@
 </head>
 
 <body>
+    <style contenteditable style="display: block;position: fixed;bottom: 0;" white-space: pre;>
+        body{
+            background: linear-gradient(to left, rgb(220, 36, 48), rgb(123, 67, 151));
+        }
+    </style>
     <noscript><div class="text"><p>Enable Javascript</p></div><div class="container"><div class="caveman"><div class="leg"><div class="foot"><div class="fingers"></div></div></div><div class="leg"><div class="foot"><div class="fingers"></div></div></div><div class="shape"><div class="circle"></div><div class="circle"></div></div><div class="head"><div class="eye"><div class="nose"></div></div><div class="mouth"></div></div><div class="arm-right"><div class="club"></div></div></div><div class="caveman"><div class="leg"><div class="foot"><div class="fingers"></div></div></div><div class="leg"><div class="foot"><div class="fingers"></div></div></div><div class="shape"><div class="circle"></div><div class="circle"></div></div><div class="head"><div class="eye"><div class="nose"></div></div><div class="mouth"></div></div><div class="arm-right"><div class="club"></div></div></div></div></noscript>
     <div id="root"></div>
 </body>
