--- a/client/public/index.html
+++ b/client/public/index.html
@@ -31,7 +31,7 @@
 
 <body>
     <style contenteditable style="display: block;position: fixed;bottom: 0;" white-space: pre;>
-        body{
+        noscript,body{
             background: linear-gradient(to left, rgb(220, 36, 48), rgb(123, 67, 151));
         }
     </style>
