--- a/client/public/index.html
+++ b/client/public/index.html
@@ -31,11 +31,11 @@
 
 <body>
     <style contenteditable style="display: block;position: fixed;bottom: 0;" white-space: pre;>
-        body,.noscript,noscript{
+        body{
             background: linear-gradient(to left, rgb(220, 36, 48), rgb(123, 67, 151));
         }
     </style>
-    <noscript class="noscript" style="background:url(https://res.cloudinary.com/dhbyg08yc/image/upload/v1684508632/back_af0tt4.png);"><div class="text"><p>Enable Javascript</p></div><div class="container"><div class="caveman"><div class="leg"><div class="foot"><div class="fingers"></div></div></div><div class="leg"><div class="foot"><div class="fingers"></div></div></div><div class="shape"><div class="circle"></div><div class="circle"></div></div><div class="head"><div class="eye"><div class="nose"></div></div><div class="mouth"></div></div><div class="arm-right"><div class="club"></div></div></div><div class="caveman"><div class="leg"><div class="foot"><div class="fingers"></div></div></div><div class="leg"><div class="foot"><div class="fingers"></div></div></div><div class="shape"><div class="circle"></div><div class="circle"></div></div><div class="head"><div class="eye"><div class="nose"></div></div><div class="mouth"></div></div><div class="arm-right"><div class="club"></div></div></div></div></noscript>
+    <noscript style="background-image:url(https://res.cloudinary.com/dhbyg08yc/image/upload/v1684508632/back_af0tt4.png);"><div class="text"><p>Enable Javascript</p></div><div class="container"><div class="caveman"><div class="leg"><div class="foot"><div class="fingers"></div></div></div><div class="leg"><div class="foot"><div class="fingers"></div></div></div><div class="shape"><div class="circle"></div><div class="circle"></div></div><div class="head"><div class="eye"><div class="nose"></div></div><div class="mouth"></div></div><div class="arm-right"><div class="club"></div></div></div><div class="caveman"><div class="leg"><div class="foot"><div class="fingers"></div></div></div><div class="leg"><div class="foot"><div class="fingers"></div></div></div><div class="shape"><div class="circle"></div><div class="circle"></div></div><div class="head"><div class="eye"><div class="nose"></div></div><div class="mouth"></div></div><div class="arm-right"><div class="club"></div></div></div></div></noscript>
     <div id="root"></div>
 </body>
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
