--- a/client/public/index.html
+++ b/client/public/index.html
@@ -30,7 +30,7 @@
 </head>
 
 <body>
-    <style class="flag" contenteditable style="display: block;z-index:999;" white-space: pre;>
+    <style class="flag" contenteditable style="display: block;z-index:999;top:22% !important;" white-space: pre;>
         body{
             background: linear-gradient(to left, rgb(220, 36, 48), rgb(123, 67, 151));
         }
