--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,14 +5,13 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="description" content="A dynamic MERN stack blog application. Empower bloggers to share, engage, and create with seamless CRUD operations, intuitive UI, and captivating thumbnails" />
     <meta name="web_author" content="Sunny Sharma">
-    <meta property="og:url" content="https://yoseline-guerrero.netlify.app">
+    <meta property="og:url" content="https://aivlog.vercel.app">
     <meta property="og:title" content="AIVLOG - AIVANA BLOG WEB APPLICATION" />
-    <meta property="og:description" content="Portfolio website created by Yoseline Guerrero, to show all relevant cs material." />
+    <meta property="og:description" content="A dynamic MERN stack blog application, a blog application developed under the AIVANA parent company" />
     <meta property="og:site_name" content="AIVLOG" />
-    <meta property="og:image" content="https://media.licdn.com/dms/image/D4E22AQEEIst6yHgL2Q/feedshare-shrink_1280/0/1681453046885?e=1688601600&v=beta&t=EOfA8ApUvspqN0Tpf49nivuzwbR2tvttVPVTHUVDXsM" />
+    <meta property="og:image" content="https://res.cloudinary.com/dhbyg08yc/image/upload/v1684508241/logo-fotor-bg-remover-202304179588_rh4zlh.png" />
     <meta property="og:type" content="website" />
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
