--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,10 +15,10 @@
     <meta property="og:type" content="website" />
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://yoseline-guerrero.netlify.app">
+    <meta name="twitter:url" content="https://aivlog.vercel.app">
     <meta name="twitter:title" content="AIVLOG - AIVANA BLOG WEB APPLICATION">
-    <meta name="twitter:description" content="Portfolio website created by Yoseline Guerrero, to show all relevant cs material.">
-    <meta name="twitter:image" content="https://media.licdn.com/dms/image/D4E22AQEEIst6yHgL2Q/feedshare-shrink_1280/0/1681453046885?e=1688601600&v=beta&t=EOfA8ApUvspqN0Tpf49nivuzwbR2tvttVPVTHUVDXsM">
+    <meta name="twitter:description" content="A dynamic MERN stack blog application, a blog application developed under the AIVANA parent company">
+    <meta name="twitter:image" content="https://res.cloudinary.com/dhbyg08yc/image/upload/v1684508241/logo-fotor-bg-remover-202304179588_rh4zlh.png">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
